# AlgunsCrypt

./: LICENSE  README.md  alguns.py  pyproject.toml
alguns/: __init__.py  alguns.py  custom_errors.py  symbols.py
